tests/fixtures/invalid/round_none_set.py
# Cannot call round() with None, Set[int]
x = round(None, {1, 2, 3})
